--- a/summary.html
+++ b/summary.html
@@ -27,10 +27,19 @@
             </div>
         </nav>
     </header>
-   
-    <main></main>
-    <div class="pattern"></div>
 
+    <main>
+        <div class="order-no"></div>
+        <div class="order-details">
+            <div class="Contact"></div>
+            <div class="Address"></div>
+            <div class="Amount"></div>
+            <div class="Items"></div>
+        </div>
+    </main>
+    <div class="pattern"></div>
+    <div class="window"></div>
+   
     <script src="scripts.js"></script>
 </body>
 </html>
