--- a/order.html
+++ b/order.html
@@ -455,7 +455,7 @@
             <!-- Add more products here -->
         </div>
         
-        <div class="center underline">Minimum order price should be PKR2000</div>
+        <div class="center underline mini">Minimum order price should be PKR2000</div>
     </main>
     <div class="pattern"></div>
     <div class="window"></div>
