--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    
     <main>
         <div class="instructions">
-            <h4>MAKING TEA USING YOUR BUBBLETEA KIT<button class="instruct-toggle">
+            <h4>MAKING TEA USING BUBBLETEA KIT<button class="instruct-toggle">
                 <svg class="instruct-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
             </span></h4> 
 
@@ -87,7 +87,7 @@
                         <ul>
                             <li>Add the cooked tapioca pearls to the cup.</li>
                             <li>Sweeten to taste by adding your preferred sweetener.</li>
-                            <li>Pour the boiled milk over the tea blend, stirring until the tea is fully dissulved.</li>
+                            <li>Pour the boiled milk over the tea blend, stirring until the tea is fully dissolved.</li>
                             <li>Pour the milk tea mixture over the boba.</li>
                             <li>Stir with a bubble tea straw.</li>
                             <li>Enjoy your hot milk tea!</li>
@@ -175,11 +175,11 @@
 
             <div class="flavor-item boba bi1">
                 <img src="images/boba1.jpg" alt="Boba">
-                <div class="boba-desc b2">CHEWY AND</div>
+                <div class="boba-desc b1">CHEWY&nbsp;&</div>
             </div>
             <div class="flavor-item boba bi2">
                 <img src="images/boba2.jpg" alt="Boba">
-                <div class="boba-desc b1">DELIGHTFUL</div>
+                <div class="boba-desc b2">DELIGHTFUL</div>
             </div>
     
             <div class="flavor-item" tabindex="0">
